<resources>
    <string name="app_name">Medical record</string>
    <string name="disease">История болезней</string>
    <string name="doctor">Посещение врачей</string>
    <string name="drug">Прием лекарств</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_view">TextView</string>
    <string name="date_begin">Дата начала</string>
    <string name="hospital">Болница</string>
    <string name="visit_date">Время приема</string>
    <string name="doctor_title">Врач</string>
    <string name="dose">Доза</string>
    <string name="save">Save</string>
    <string name="header">header</string>
    <string name="med_card">Медицинская карта</string>
    <string name="sam">Самигулин Тимур</string>
    <string name="medicine">Лекарство</string>
    <string name="title">title</string>
    <string name="days">Количество дней приема</string>
    <string name="date_begin_medicine">Дата начала приема</string>
    <string name="dop_info">Дополнительная информация</string>
    <string name="cause">Причина</string>
    <string name="doctor_date_begin">Дата посещения</string>
    <string name="recipe">Рецепт</string>
    <string name="result">Итоги</string>
    <string name="disease_title">Болезнь</string>
    <string name="symptoms">Симптомы</string>
    <string name="date_begin_disease">Дата начала болезни</string>
    <string name="_11_03_2020">11.03.2020</string>
    <string name="course">Ход болезни</string>
    <string name="detail_disease_begin_date">Начало болезни -</string>
    <string name="detail_disease_date_end">Дата выздоровления -</string>
    <string name="edit">Редактировать</string>
    <string name="detail_visit_date">Дата посещения -</string>
    <string name="doctor_couse">Причина посещения</string>
    <string name="doctor_result">Итоги посещения</string>
    <string name="avatar">avatar</string>
    <string name="mc_date_birth">Дата рождения -</string>
    <string name="hight">Рост</string>
    <string name="pass">...</string>
    <string name="weight">Вес</string>
    <string name="blood">Группа крови</string>
    <string name="allergies">Аллергии</string>
    <string name="important_disease">Важные заболевания</string>
    <string name="important_medicine">Принимаемые препораты</string>
    <string name="donor">Донор органов</string>
    <string name="title_activity_maps">Map</string>
    <string name="map">Карта</string>
    <string name="analiz">Анализы</string>
    <string name="email">email</string>
    <string name="hospitals">Больницы</string>
    <string name="exit">Выход</string>
</resources>
